attempt to fix horizontal scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -633,6 +633,7 @@ div#contact-sidebar {
 	width: 412px;
 	height: 310px;
 	overflow-y: scroll;
+	overflow-x: none;
 	float: left;
 	margin-top: 20px;
 }
